[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
indicatif = {version = "0.16.2", features = ["rayon"]}
nalgebra = "0.29.0"
rand = "0.8.4"
rayon = "1.5.1"
approx = "0.5.0"
rand_distr = "0.4.2"

[profile.release]
debug = true
